--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,7 @@ test:
   host: localhost
   username: root
   password:
+  encoding: utf8
   timeout: 5000
 
 production:
@@ -26,4 +27,5 @@ production:
   host: localhost
   username: root
   password:
+  encoding: utf8
   timeout: 5000
